--- a/app/src/main/res/layout/content_profile_edit_contact_info.xml
+++ b/app/src/main/res/layout/content_profile_edit_contact_info.xml
@@ -40,6 +40,12 @@
          android:layout_marginStart="@dimen/_10sdp"
          android:layout_marginEnd="@dimen/_10sdp"
          />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight=".25"
+            android:orientation="vertical"
+            />
 
     <LinearLayout
         android:layout_width="match_parent"
