--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -42,5 +42,6 @@
     <color name="color_aqua">#0ddabf</color>
     <color name="round_text_view_color">#26d0b9</color>
     <color name="light_text_color">#7c7d80</color>
+    <color name="dark_text_color">#3b3e42</color>
 
 </resources>
