--- a/app/src/main/res/layout/content_profile_edit_business_info.xml
+++ b/app/src/main/res/layout/content_profile_edit_business_info.xml
@@ -30,7 +30,7 @@
         <TextView
             android:fontFamily="@font/montserrat"
             android:text="@string/earn_credit_coins_forty"
-            android:textColor="@color/colorBlack"
+            android:textColor="@color/dark_text_color"
             android:textSize="@dimen/_15sdp"
             android:textStyle="bold"
             android:layout_width="match_parent"
@@ -44,12 +44,23 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="4.50"
+            android:layout_weight="5"
             android:orientation="vertical"
-            android:weightSum="9"
-            android:background="@drawable/bg_white_view"
             android:layout_marginStart="@dimen/_10sdp"
             android:layout_marginEnd="@dimen/_10sdp">
+
+            <android.support.v7.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:cardCornerRadius="@dimen/_4sdp"
+                app:cardElevation="@dimen/_2sdp"
+                app:cardUseCompatPadding="true">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:weightSum="9.15">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -57,7 +68,7 @@
                 android:layout_weight="1.85"
                 android:orientation="horizontal"
                 tools:ignore="NestedWeights"
-                android:layout_marginTop="@dimen/_7sdp"
+                android:layout_marginTop="@dimen/_5sdp"
                 android:layout_marginStart="@dimen/_10sdp"
                 android:layout_marginEnd="@dimen/_10sdp">
 
@@ -83,6 +94,7 @@
                         app:autoSizeMinTextSize="@dimen/_10sdp"
                         app:autoSizeStepGranularity="0.2sp"
                         app:autoSizeTextType="uniform"
+                        android:textColor="@color/textColors"
                         android:textColorHint="@color/colorGreyDeep"
                         android:longClickable="false"
                         />
@@ -121,6 +133,7 @@
                         app:autoSizeMinTextSize="@dimen/_10sdp"
                         app:autoSizeStepGranularity="0.2sp"
                         app:autoSizeTextType="uniform"
+                        android:textColor="@color/textColors"
                         android:textColorHint="@color/colorGreyDeep"
                         android:longClickable="false"
                         />
@@ -158,6 +171,7 @@
                         app:autoSizeMinTextSize="@dimen/_10sdp"
                         app:autoSizeStepGranularity="0.2sp"
                         app:autoSizeTextType="uniform"
+                        android:textColor="@color/textColors"
                         android:textColorHint="@color/colorGreyDeep"
                         android:drawableEnd="@drawable/ic_dropdown"
                         />
@@ -196,6 +210,7 @@
                         app:autoSizeMinTextSize="@dimen/_10sdp"
                         app:autoSizeStepGranularity="0.2sp"
                         app:autoSizeTextType="uniform"
+                        android:textColor="@color/textColors"
                         android:textColorHint="@color/colorGreyDeep"
                         android:longClickable="false"
                         />
@@ -226,11 +241,11 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight=".45"
-                    android:background="@drawable/bg_green_view"
+                    android:background="@drawable/ripple_green_button"
                     android:textSize="@dimen/_12sdp"
                     android:textColor="@color/colorAppDeep"
                     android:text="@string/submit"
-                    android:textAllCaps="true"
+                    android:textAllCaps="false"
                     />
                 <View
                     android:layout_width="0dp"
@@ -247,19 +262,22 @@
                     android:textSize="@dimen/_12sdp"
                     android:textColor="@color/colorGreyDeep"
                     android:text="@string/cancel"
-                    android:textAllCaps="true"
+                    android:textAllCaps="false"
 
                     />
 
             </LinearLayout>
 
-        </LinearLayout>
+            </LinearLayout>
 
+            </android.support.v7.widget.CardView>
+
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="2.50"
+            android:layout_weight="2"
             android:orientation="vertical"
             />
 
