--- a/app/src/main/res/drawable/bg_black_view.xml
+++ b/app/src/main/res/drawable/bg_black_view.xml
@@ -4,7 +4,7 @@
     <item>
         <shape android:shape="rectangle">
             <corners android:radius="@dimen/_25sdp" />
-            <stroke android:width="@dimen/_1sdp" android:color="@color/colorWhite" />
+            <stroke android:width="1px" android:color="@color/colorWhite" />
             <solid android:color="#A6000000" />
         </shape>
     </item>
