--- a/app/src/main/res/layout/content_registration_step_three.xml
+++ b/app/src/main/res/layout/content_registration_step_three.xml
@@ -1,11 +1,123 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/swipeRefreshLayout"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/login_bg"
+    android:id="@+id/rootLayout"
+    android:padding="@dimen/_40sdp"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".registration.view.RegistrationStepThreeActivity"
     tools:showIn="@layout/activity_registration_step_three">
 
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="@string/thank_you"
+        android:textColor="@color/colorYellow"
+        android:textSize="@dimen/_19sdp"
+        android:textStyle="bold"
+        android:fontFamily="@font/montserrat"
+        android:gravity="center"
+        app:layout_constraintBottom_toTopOf="@+id/textView3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="@string/upload_id_picture"
+        android:textSize="@dimen/_12sdp"
+        android:textColor="@color/colorSemiWhite"
+        android:fontFamily="@font/montserrat"
+        android:gravity="center"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+    <EditText
+        android:id="@+id/etIdType"
+        android:layout_width="0dp"
+        android:layout_height="@dimen/_35sdp"
+        android:background="@drawable/bg_black_view"
+        android:hint="@string/choose_type_id"
+        android:textColorHint="@color/colorWhite"
+        android:textColor="@color/colorWhite"
+        android:layout_marginTop="@dimen/_20sdp"
+        android:textSize="@dimen/_12sdp"
+        android:fontFamily="@font/montserrat"
+        android:paddingStart="@dimen/_10sdp"
+        android:paddingEnd="@dimen/_10sdp"
+        app:layout_constraintBottom_toTopOf="@+id/imgPersonalType"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView3"
+        android:drawableEnd="@drawable/ic_dropdown"
+        android:focusable="false"/>
+
+    <ImageView
+        android:id="@+id/imgPersonalType"
+        android:contentDescription="@string/app_name"
+        android:layout_width="0dp"
+        android:layout_height="@dimen/_125sdp"
+        android:background="@drawable/bg_black_view_multiline"
+        android:layout_marginTop="@dimen/_15sdp"
+        android:gravity="top"
+        android:scaleType="fitCenter"
+        app:layout_constraintBottom_toTopOf="@+id/etNo"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/etIdType"
+        />
+
+    <EditText
+        android:id="@+id/etNo"
+        android:textSize="@dimen/_13sdp"
+        android:hint="@string/enter_id_number"
+        android:textColorHint="@color/colorWhite"
+        android:textColor="@color/colorWhite"
+        android:layout_width="0dp"
+        android:maxLines="1"
+        android:inputType="text"
+        android:layout_height="@dimen/_35sdp"
+        android:background="@drawable/bg_black_view"
+        android:layout_marginTop="@dimen/_15sdp"
+        android:paddingStart="@dimen/_10sdp"
+        android:paddingEnd="@dimen/_10sdp"
+        app:layout_constraintBottom_toTopOf="@+id/buttonSubmit"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imgPersonalType" />
+
+    <Button
+        android:id="@+id/buttonSubmit"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:background="@drawable/yellow_button"
+        android:text="@string/continue_to_login"
+        android:textSize="@dimen/_13sdp"
+        android:fontFamily="@font/montserrat"
+        android:textColor="@color/colorSemiWhite"
+        android:layout_marginTop="@dimen/_15sdp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/etNo" />
+
 </android.support.constraint.ConstraintLayout>
+</android.support.v4.widget.SwipeRefreshLayout>
