--- a/app/src/main/res/layout/content_loan_list_history.xml
+++ b/app/src/main/res/layout/content_loan_list_history.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".loanHistoryCurrent.view.LoanHistoryListActivity"
+    tools:context=".loanHistory.view.LoanHistoryListActivity"
     tools:showIn="@layout/activity_loan_list_history">
 
     <include
