--- a/app/src/main/res/layout/fragment_loan_plan_list.xml
+++ b/app/src/main/res/layout/fragment_loan_plan_list.xml
@@ -10,6 +10,72 @@
         android:layout_height="match_parent"
         android:background="@color/screenBackground">
 
+        <android.support.v7.widget.CardView
+            android:id="@+id/cardView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/_12sdp"
+            android:layout_marginTop="@dimen/_10sdp"
+            android:layout_marginEnd="@dimen/_12sdp"
+            android:elevation="@dimen/_3sdp"
+            android:visibility="gone"
+            >
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:padding="@dimen/_5sdp"
+
+                >
+
+                <ImageView
+                    android:id="@+id/imgHistory"
+                    android:layout_gravity="center"
+                    android:layout_width="@dimen/_35sdp"
+                    android:layout_height="@dimen/_35sdp"
+                    android:scaleType="fitXY"
+                    android:adjustViewBounds="true"
+                    android:src="@drawable/ic_loan_history_img"
+                    android:contentDescription="@string/app_name"
+                    android:layout_marginTop="@dimen/_5sdp"/>
+
+                <TextView
+                    android:layout_marginStart="@dimen/_12sdp"
+                    android:layout_marginTop="@dimen/_5sdp"
+                    android:layout_marginEnd="@dimen/_12sdp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/_12sdp"
+                    android:text="@string/empty_loan_message"
+                    android:gravity="center"
+                    android:textColor="@color/textColors"
+                    android:fontFamily="@font/montserrat"
+                    />
+
+                <Button
+                    android:id="@+id/buttonApplyLoan"
+                    android:layout_width="@dimen/_120sdp"
+                    android:layout_height="@dimen/_30sdp"
+                    android:layout_marginTop="@dimen/_7sdp"
+                    android:layout_marginBottom="@dimen/_7sdp"
+                    android:background="@drawable/ripple_green_button"
+                    android:fontFamily="@font/montserrat"
+                    android:text="@string/apply_loan"
+                    style="?android:attr/borderlessButtonStyle"
+                    android:textAllCaps="false"
+                    android:textColor="@color/colorWhite"
+                    android:textStyle="bold"
+                    android:layout_gravity="center"
+                   />
+
+
+
+            </LinearLayout>
+
+
+        </android.support.v7.widget.CardView>
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rvLoan"
         android:layout_width="match_parent"
