--- a/app/src/main/res/layout/layout_popup_window.xml
+++ b/app/src/main/res/layout/layout_popup_window.xml
@@ -3,28 +3,28 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/alert_filter_item_layout"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_height="@dimen/_42sdp"
     android:padding="@dimen/_3sdp"
     android:background="@color/screenBackground">
 
     <ImageView
         android:id="@+id/alert_filter_icon"
-        android:contentDescription="@string/app_name"
-        android:layout_width="@dimen/_22sdp"
-        android:layout_height="@dimen/_22sdp"
+        android:layout_width="@dimen/_23sdp"
+        android:layout_height="@dimen/_23sdp"
         android:layout_marginStart="@dimen/_5sdp"
-        android:layout_marginTop="@dimen/_5sdp"
+        android:contentDescription="@string/app_name"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.app.l_pesa.common.CommonTextRegular
         android:id="@+id/alert_filter_name"
-        android:layout_width="@dimen/_135sdp"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/_125sdp"
+        android:layout_height="match_parent"
         android:layout_marginStart="@dimen/_5sdp"
-        android:layout_marginTop="@dimen/_5sdp"
         android:fontFamily="@font/montserrat"
-        android:textSize="@dimen/_12sdp"
+        android:textSize="@dimen/_13sdp"
+        android:gravity="center|start"
         app:layout_constraintBottom_toBottomOf="@+id/alert_filter_icon"
         app:layout_constraintStart_toEndOf="@+id/alert_filter_icon"
         app:layout_constraintTop_toTopOf="parent" />
