--- a/app/src/main/res/drawable/ic_dashboard.xml
+++ b/app/src/main/res/drawable/ic_dashboard.xml
@@ -1,5 +1,5 @@
-<vector android:height="24dp" android:viewportHeight="48.0"
-    android:viewportWidth="48.0" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
+<vector android:height="@dimen/_40sdp" android:viewportHeight="48.0"
+    android:viewportWidth="48.0" android:width="@dimen/_40sdp" xmlns:android="http://schemas.android.com/apk/res/android">
     <path android:fillColor="#B0C960" android:pathData="M20.95,19.44c0,1.21 -0.98,2.18 -2.18,2.18H7.66c-1.21,0 -2.18,-0.98 -2.18,-2.18V7.99c0,-1.21 0.98,-2.18 2.18,-2.18h11.11c1.21,0 2.18,0.98 2.18,2.18V19.44z"/>
     <path android:fillColor="#EAB871" android:pathData="M42.42,19.44c0,1.21 -0.98,2.18 -2.18,2.18H29.12c-1.21,0 -2.19,-0.98 -2.19,-2.18V7.99c0,-1.21 0.98,-2.18 2.19,-2.18h11.11c1.21,0 2.18,0.98 2.18,2.18V19.44z"/>
     <path android:fillColor="#7CC9DB" android:pathData="M20.95,40.9c0,1.21 -0.98,2.19 -2.18,2.19H7.66c-1.21,0 -2.18,-0.98 -2.18,-2.19V29.46c0,-1.21 0.98,-2.18 2.18,-2.18h11.11c1.21,0 2.18,0.98 2.18,2.18V40.9z"/>
