--- a/app/src/main/res/drawable/ic_menu_investment_icon.xml
+++ b/app/src/main/res/drawable/ic_menu_investment_icon.xml
@@ -1,5 +1,5 @@
-<vector android:height="24dp" android:viewportHeight="48"
-    android:viewportWidth="48" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
+<vector android:height="@dimen/_40sdp" android:viewportHeight="48"
+    android:viewportWidth="48" android:width="@dimen/_40sdp" xmlns:android="http://schemas.android.com/apk/res/android">
     <path android:fillColor="#B0C961" android:pathData="M11.527,16.918h4.557v18.703h-4.557z"/>
     <path android:fillColor="#B0C961" android:pathData="M35.546,13.121l-22.69,0l11.107,-8.354z"/>
     <path android:fillColor="#B0C961" android:pathData="M32.176,16.918h4.557v18.703h-4.557z"/>
