--- a/app/src/main/res/drawable/ic_my_profile.xml
+++ b/app/src/main/res/drawable/ic_my_profile.xml
@@ -1,5 +1,5 @@
-<vector android:height="24dp" android:viewportHeight="48.0"
-    android:viewportWidth="48.0" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
+<vector android:height="@dimen/_40sdp" android:viewportHeight="48.0"
+    android:viewportWidth="48.0" android:width="@dimen/_40sdp" xmlns:android="http://schemas.android.com/apk/res/android">
     <path android:fillColor="#C0E7F6" android:pathData="M23.92,24.08m-17.12,0a17.12,17.12 0,1 1,34.25 0a17.12,17.12 0,1 1,-34.25 0"/>
     <path android:fillColor="#B0C960" android:pathData="M10.58,35.53c0,0 9.02,-8.41 14.19,-7.1s11.8,5.94 12.19,7.17c0.39,1.23 -7.33,7.17 -13.42,6.79C17.45,42.01 10.58,35.53 10.58,35.53z"/>
     <path android:fillColor="#EAB871" android:pathData="M23.92,20.65m-6.48,0a6.48,6.48 0,1 1,12.96 0a6.48,6.48 0,1 1,-12.96 0"/>
