--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -24,6 +24,7 @@
         app:itemTextColor="@drawable/bg_text_drawer"
         app:menu="@menu/activity_main_drawer"
         android:background="@color/colorWhite"
+        android:theme="@style/NavigationTheme"
 
        />
 
