--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,6 +9,10 @@
 
     </style>
 
+    <style name="NavigationTheme" parent="AppTheme">
+        <item name="listPreferredItemHeightSmall">@dimen/_55sdp</item>
+    </style>
+
     <style name="Toolbar.TitleText" parent="TextAppearance.Widget.AppCompat.Toolbar.Title">
         <item name="android:textSize">@dimen/_14sdp</item>
     </style>
@@ -23,8 +27,8 @@
     </style>
 
     <style name="NavDrawerTextStyle" parent="Base.TextAppearance.AppCompat">
-        <item name="android:textColor">@color/colorSemiBlack</item>
-        <item name="android:textSize">@dimen/_14sdp</item>
+        <item name="android:textColor">@color/colorMenuTab</item>
+        <item name="android:textSize">@dimen/_13sdp</item>
 
     </style>
 
