--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,158 +1,97 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/ll_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:weightSum="15"
-    android:background="@drawable/login_bg">
+    android:background="@drawable/login_bg"
+    android:padding="@dimen/_40sdp"
+    xmlns:android="http://schemas.android.com/apk/res/android" >
 
-    <LinearLayout
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="@dimen/_75sdp"
+        android:layout_height="@dimen/_75sdp"
+        android:layout_marginTop="@dimen/_60sdp"
+        android:contentDescription="@string/app_name"
+        app:layout_constraintBottom_toTopOf="@+id/textView4"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_chainStyle="spread"
+        app:srcCompat="@drawable/lpesa_logo" />
 
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="4.5"
-        android:gravity="center"
-        android:orientation="horizontal"
-        >
+    <com.app.l_pesa.common.CommonTextRegular
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/starter_loan"
+        android:textColor="@color/colorYellow"
+        android:textSize="@dimen/_22sdp"
+        android:textStyle="bold"
+        android:shadowColor="#000000"
+        android:shadowDx="2.7"
+        android:shadowDy="2.7"
+        android:shadowRadius="1"
+        android:fontFamily="@font/montserrat"
+        android:layout_marginTop="@dimen/_70sdp"
+        app:layout_constraintBottom_toTopOf="@+id/buttonSignUp"
+        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="252dp" />
 
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="@dimen/_75sdp"
-            android:layout_height="@dimen/_75sdp"
-            android:src="@drawable/lpesa_logo"
-            android:contentDescription="@string/app_name"
+    <com.app.l_pesa.common.CustomButtonRegular
+        android:id="@+id/buttonSignUp"
+        android:layout_width="0dp"
+        android:layout_height="@dimen/_35sdp"
+        android:background="@drawable/yellow_button"
+        android:text="@string/get_started"
+        android:fontFamily="@font/montserrat"
+        android:textColor="@color/colorSemiWhite"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:textStyle="bold"
+        android:layout_marginTop="@dimen/_3sdp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
-            />
+    <com.app.l_pesa.common.CommonTextRegular
+        android:id="@+id/textView24"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/colorSemiWhite"
+        android:layout_marginTop="@dimen/_10sdp"
+        android:textStyle="bold"
+        android:fontFamily="@font/montserrat"
+        android:text="@string/already_using_lpesa"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonSignUp" />
 
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:orientation="vertical"
-        />
-
-    <LinearLayout
-        android:layout_gravity="center"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="2.50">
-
-        <com.app.l_pesa.common.CommonTextRegular
-            android:textColor="@color/colorYellow"
-            android:shadowColor="#000000"
-            android:shadowDx="2.7"
-            android:shadowDy="2.7"
-            android:shadowRadius="1"
-            android:textSize="@dimen/_27sdp"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:text="@string/starter_loan"
-
-            />
-
-    </LinearLayout>
-
-
-    <RelativeLayout
-        android:id="@+id/rlPassword"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1.25"
-        android:gravity="center"
-        android:layout_marginStart="@dimen/_12sdp"
-        android:layout_marginEnd="@dimen/_12sdp"
-        >
-
-        <com.app.l_pesa.common.CustomButtonRegular
-            android:id="@+id/buttonSignUp"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:textSize="@dimen/_14sdp"
-            android:textColor="@color/colorWhite"
-            android:background="@drawable/bg_button_yellow"
-            android:text="@string/get_started"
-            android:textStyle="bold"
-            />
-
-
-    </RelativeLayout>
-
-
-    <LinearLayout
-
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1.25"
-        android:orientation="vertical"
-        >
-
-        <com.app.l_pesa.common.CommonTextRegular
-            android:textColor="#ffffff"
-            android:textSize="@dimen/_17sdp"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:text="@string/already_using_lpesa"
-            />
-
-    </LinearLayout>
-
-    <RelativeLayout
-        android:id="@+id/rlLogin"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1.25"
-        android:layout_marginStart="@dimen/_12sdp"
-        android:layout_marginEnd="@dimen/_12sdp"
-
-        >
-
-        <com.app.l_pesa.common.CustomButtonRegular
-            android:id="@+id/buttonLogin"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:textSize="@dimen/_14sdp"
-            android:textColor="@color/colorWhite"
-            android:background="@drawable/bg_black_view"
-            android:text="@string/sign_in"
-            android:textStyle="bold"
-
-            />
-    </RelativeLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight=".25"
-        android:orientation="vertical"
-
-        />
-
+    <com.app.l_pesa.common.CustomButtonRegular
+        android:layout_width="0dp"
+        android:layout_height="@dimen/_35sdp"
+        android:layout_marginTop="@dimen/_5sdp"
+        android:background="@drawable/bg_black_view"
+        android:text="@string/sign_in"
+        android:fontFamily="@font/montserrat"
+        android:id="@+id/buttonLogin"
+        android:textColor="@color/colorSemiWhite"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView24" />
 
     <ProgressBar
         android:id="@+id/progressBar"
         style="?android:attr/progressBarStyle"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight=".75"
-        android:visibility="invisible"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:indeterminateTint="@color/colorWhite"
+        android:padding="@dimen/_5sdp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />
 
-        />
-
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="3.25"
-
-
-        />
-</LinearLayout>
-
+</android.support.constraint.ConstraintLayout>
