--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -28,7 +28,7 @@
 
     <style name="NavDrawerTextStyle" parent="Base.TextAppearance.AppCompat">
         <item name="android:textColor">@color/colorMenuTab</item>
-        <item name="android:textSize">@dimen/_11sdp</item> //
+        <item name="android:textSize">@dimen/_12sdp</item>
 
     </style>
 
